@@ -1,5 +1,11 @@
 2005-06-22  Mike Kestner  <mkestner@novell.com>
 
+	* sample/GtkDemo/DemoHyperText.cs : replace PersistentData usage that
+	breaks on csc.
+	* sample/GtkDemo/DemoTreeStore.cs : fix a 2.0 usage.
+
+2005-06-22  Mike Kestner  <mkestner@novell.com>
+
 	* generator/ManagedCallString.cs : don't assume ref for structs.
 	* generator/VMSignature.cs : don't assume ref for structs.
 
